--- a/nieuwe/assets/css/more.css
+++ b/nieuwe/assets/css/more.css
@@ -38,3 +38,65 @@
     transform: translateY(250%) rotate(8deg);
     transition: transform 1.4s cubic-bezier(0.25, 0.8, 0.25, 1);
 }
+
+
+/* FADE IN FADE OUT */
+.fade-loop {
+    animation: fadeLoop 2s ease-in-out infinite;
+}
+
+@keyframes fadeLoop {
+    0% {
+        opacity: 1;
+    }
+
+    50% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+/* Resume popup */
+#resume-popup {
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 100vw;
+    transform: translateX(100%);
+    opacity: 0;
+    transition: transform 0.4s ease, opacity 0.4s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 999;
+
+}
+
+#resume-popup>div {
+    height: fit-content;
+    width: fit-content;
+    background: #fff;
+    border: 1px solid #e5e5e5;
+    border-radius: 8px;
+    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.12);
+    padding: 8px;
+
+    transform: rotate(-2deg);
+}
+
+#resume-popup.show {
+    transform: translateX(0%);
+    opacity: 1;
+}
+
+#resume-popup img {
+    display: block;
+    width: 250px;
+    height: auto;
+    border-radius: 6px;
+
+}
