--- a/nieuwe/assets/css/input.css
+++ b/nieuwe/assets/css/input.css
@@ -1,10 +1,10 @@
 @import "tailwindcss";
 
 @theme {
-    --shadow-big: 4px 4px 20px rgba(0, 0, 0, 0.2);
+    --shadow-big: 0 0 12px rgba(0, 0, 0, 0.1);
 
     --color-grey: rgb(170, 170, 170, 0.9);
-    --color-black: #303030;
+    --color-black: #000000;
 
     --color-grad-black: rgb(0, 0, 0, .3);
 
