--- a/nieuwe/assets/css/output.css
+++ b/nieuwe/assets/css/output.css
@@ -42,6 +42,7 @@
     --radius-3xl: 1.5rem;
     --radius-4xl: 2rem;
     --ease-out: cubic-bezier(0, 0, 0.2, 1);
+    --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
     --aspect-video: 16 / 9;
     --default-transition-duration: 150ms;
     --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -326,6 +327,9 @@
   .inline-flex {
     display: inline-flex;
   }
+  .table {
+    display: table;
+  }
   .aspect-\[4\/2\.5\] {
     aspect-ratio: 4/2.5;
   }
@@ -354,8 +358,14 @@
   .h-\[70vh\] {
     height: 70vh;
   }
+  .h-\[90vh\] {
+    height: 90vh;
+  }
   .h-\[110px\] {
     height: 110px;
+  }
+  .h-\[790vh\] {
+    height: 790vh;
   }
   .h-fit {
     height: fit-content;
@@ -378,6 +388,9 @@
   .w-\[70px\] {
     width: 70px;
   }
+  .w-\[90px\] {
+    width: 90px;
+  }
   .w-\[500px\] {
     width: 500px;
   }
@@ -395,6 +408,9 @@
   }
   .flex-grow {
     flex-grow: 1;
+  }
+  .border-collapse {
+    border-collapse: collapse;
   }
   .translate-x-\[120\%\] {
     --tw-translate-x: 120%;
@@ -705,6 +721,9 @@
   .uppercase {
     text-transform: uppercase;
   }
+  .underline {
+    text-decoration-line: underline;
+  }
   .antialiased {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -778,6 +797,10 @@
   .duration-1000 {
     --tw-duration: 1000ms;
     transition-duration: 1000ms;
+  }
+  .ease-in-out {
+    --tw-ease: var(--ease-in-out);
+    transition-timing-function: var(--ease-in-out);
   }
   .ease-out {
     --tw-ease: var(--ease-out);
@@ -1047,6 +1070,16 @@
   .md\:h-\[80px\] {
     @media (width >= 48rem) {
       height: 80px;
+    }
+  }
+  .md\:h-\[85vh\] {
+    @media (width >= 48rem) {
+      height: 85vh;
+    }
+  }
+  .md\:h-\[88vh\] {
+    @media (width >= 48rem) {
+      height: 88vh;
     }
   }
   .md\:h-\[90vh\] {
